Adding the text for human practices

--- a/wiki/pages/human-practices.html
+++ b/wiki/pages/human-practices.html
@@ -1,9 +1,175 @@
 {% extends "my-layout.html" %}
   
 {% block sidebar_content %}
+    <ul class="nav nav-pills flex-column mb-auto">
+              <li class="nav-item">
+                <a href="#section1" class="nav-link link-dark" aria-current="page">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#home"/></svg>
+                  The Impact Framework
+                </a>
+              </li>
+              <li>
+                <a href="#section2" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#speedometer2"/></svg>
+                  Sustainable Development Goals
+                </a>
+              </li>
+              <li>
+                <a href="#section3" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#table"/></svg>
+                  Stakeholder Approach
+                </a>
+              </li>
+              <li>
+                <a href="#section4" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#grid"/></svg>
+                  Stakeholder Interactions
+                </a>
+              </li>
+              <li>
+                <a href="#section5" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+                  Surveys
+                </a>
+              </li>
+
+              <li>
+                <a href="#section6" class="nav-link link-dark">
+                  <svg class="bi me-2" width="16" height="16"><use xlink:href="#people-circle"/></svg>
+                  Final Implementation
+                </a>
+              </li>
+
+            </ul>
+
 {% endblock %}
 
 {% block heading %}Human Practices{% endblock %}
+<p class="mt-5 MAIN-STUFF"> Introducing Our Human Practices Approach: The IMPACT Framework </p>
+
+<p class="mt-5 sub-stuff">In our iGEM journey, we have adopted the <b>"IMPACT Framework"</b> as the guiding philosophy for our Human Practices endeavors. This holistic framework, rooted in the principles of Ideation, Mobilization, Purpose, Adaptation, Collaboration, and Transparency, has shaped how we bridge the gap between synthetic biology and real-world challenges.</p>
+
+<figure>
+<img class="img-fluid rounded mx-auto d-block" style="scale:0.8" src="https://static.igem.wiki/teams/4641/wiki/human-practices-images/the-impact-framework.png">
+<figcaption style="text-align:center"> The “IMPACT” Framework </figcaption>
+</figure>
+
+<p class="mt-5 sub-stuff">
+    <b>Ideation - Connecting with Local Realities</b><br>
+Our journey began by embracing iGEM's vision of "local people solving local problems". We initiated a deep exploration of the issues faced in Manipal, Karnataka, our home ground. By engaging with the local community and collaborating with university professors who had previously worked on pressing problems in the Udupi district, we embarked on a mission to discover a local issue that our team could tackle with determination and dedication. We found out that industrial effluents were discharged near Manipal at the Udyavara River and Indrani River, making the water murky and discolored and causing the death of fish in the rivers and its tributaries, endangering the people's livelihoods. The polluted rivers contaminated the groundwaters, seeped into the wells, and contaminated drinking water, inducing adverse health effects, such as fevers and skin rashes, in the local population (reference). While attempting to identify the causative agents for the damage caused, we identified many pressing concerns—particularly the accumulation of triclocarban (TCC) in local wastewater treatment plants, threatening aquatic life, our coastal fisheries, and our agricultural framework.<br><br>
+
+<b>Mobilization - Strategic Planning and Resource Allocation</b><br>
+At each stage of our project, we meticulously crafted project plans outlining goals, milestones, and timelines, ensuring our efforts were focused and well-coordinated. Recognizing the significance of resources, we mobilized the necessary human, financial, and technological assets and conducted meetings online with prominent people in protein engineering, synthetic biology, and wastewater treatment. We also proactively addressed potential challenges through comprehensive risk assessments, which helped us identify the problem with our initial idea of enzyme efficiency enhancement. <br><br>
+
+<b>Purpose - Alignment with Values and Community Need</b><br>
+Our project remained firmly grounded in our team's core values, iGEM principles, and ethical considerations. We actively listened to the needs and concerns of relevant communities, including chemical industries, wastewater treatment plants, and the local public. This dialogue allowed us to establish a clear, purpose-driven mission benefiting our local community and the environment, establish methods to talk to people about genetically modified organisms, and reassess the importance of a kill switch in our project.<br><br>
+
+<b>Adaptation - Continuous Improvement and Learning</b><br>
+We used adaptability as a guiding principle, allowing us to adjust strategies and tactics based on feedback and evolving circumstances. It was often disheartening when we realized that an idea we previously worked on had reached a roadblock. However, we fostered a learning culture from our setbacks; our team continuously sought growth opportunities. This is how our project evolved from enzyme modification to metabolic engineering followed by our final degradation pathway and selection of suitable chassis.<br><br>
+
+<b>Collaboration - Active Partnerships and Achievement of Goal</b><br>
+Collaboration was central to our approach. By actively seeking partnerships with universities worldwide and with external organizations such as non government environmental protection organizations, we utilized these partnerships to enhance our project's impact and work towards a greater good. By setting mutually agreeable goals, we successfully collaborated with them to accomplish our goals.<br><br>
+
+<b>Transparency - Open Communication and Accountability</b><br>
+Effective communication was the pillar of our interactions. We maintained open and transparent channels within our team and with external stakeholders, fostering clarity and trust. Ethical accountability was paramount—we held ourselves responsible for ethical conduct and commitments to our stakeholders. Our thorough documentation of the entire process has helped ensure that our insights and knowledge were accessible and usable by others.<br><br>
+
+The <b> "IMPACT Framework" </b> has served as our compass, guiding our team to develop 
+innovative solutions that align with our values, address real-world needs, and adapt to changing circumstances. Through collaboration and transparency, we have fortified our connections and accountability, ultimately magnifying the positive impact of our synthetic biology project.<br><br>
+
+</p>
+
+<p class="mt-5 MAIN-STUFF">
+        Sustainable Development Goals
+</p>
+
+<p class="mt-5 sub-stuff">The Sustainable Development Goals (SDGs), also known as the Global Goals adopted by the United Nations in 2015, aim to end poverty, protect the planet, and ensure that all people enjoy peace and prosperity. The 17 SDGs are integrated – they recognize that action in one area will affect outcomes in others and that development must balance social, economic, and environmental sustainability. Throughout our project, we have kept these SDGs in mind and worked towards fulfilling them and understanding the interconnectivity of these goals.<br><br></p>
+
+<ul style="font-family: 'Poppins', sans-serif; font-size: 20px; color: #666;">
+    <li>Our project considerably advances several Sustainable Development Goals (SDGs). We advance Good Health and Well-Being (Goal 3) by designing a novel approach towards the degradation of triclocarban (TCC), a hazardous antimicrobial that builds up in wastewater treatment facilities. Both agriculture and aquatic life are harmed due to this toxic chemical's presence in water systems. TCC causes endocrine disruption in fish, and when the sludge from the WWTP is used as a fertilizer, it affects the yield of the crops. In turn, it can reach humans through the food chain.</li>
+    <li>Our approach also addresses the buildup of micropollutants in water sources, which aligns with Goal 6: Clean Water and Sanitation.</li>
+    <li>It embodies Infrastructure, Industry, and Innovation (Goal 9) through the packed bed batch bioreactor design for treating TCC in the sludge in sludge treatment plants (STPs). </li>
+    <li>Along with that, we support Sustainable Communities and Cities (Goal 11) by raising awareness about harmful chemicals in pharmaceuticals and personal care products (PPCPs) and their impact on urban areas.</li>
+    <li>Responsible Consumption and Production (Goal 12) by spreading awareness about the presence of harmful chemicals in PPCPs through our education drives and talks and promoting that the labels on products should be read before buying PPCPs.<br></li>
+    <li>By proposing our solution to degrade triclocarban in wastewater, we are improving Life On Land and Life Below Water (Goals 14 and 15) by taking a step towards preventing the harm caused to agriculture, aquatic life, and human health.</li>
+    <li>Besides, we have prepared synthetic biology-related content for varying age groups and interacted with students to educate them, ensuring that Quality Education (Goal 4) is fulfilled. </li>
+    <li>We have also reached out to underprivileged children and specially-abled people to make science accessible to everybody, whether they are a part of the scientific community or not, thus meeting Goal 10 (Reduced Inequalities). </li>
+    <li>We have been encouraging collaborations with various institutions and NGOs for value education and maximum reach to the community throughout our project (Goal 17-Partnership For Goals).</li>
+</ul>
+
+<p class="mt-5 MAIN-STUFF">
+        Stakeholder Approach
+</p>
+
+<p class="mt-5 sub-stuff">The effect of any project or product can only be impactful if the project's stakeholders are kept in mind during the design process. Stakeholders will be affected by the implementation of a project or can assist in developing the project such that the implementation adheres to environmental and scientific guidelines; this helps us understand how our project impacts the world and how the world impacts our project.<br><br></p>
+
+<p class="mt-5 MAIN-STUFF">Surveys</p>
+
+<p class="mt-5 sub-stuff"><b>1. Analyzing awareness without the bias of age and profession: </b><br></p>
+
+<p class="mt-5 sub-stuff">This survey aimed to gather information about public perceptions and knowledge of products in personal care products, wastewater management systems and general ideas of the public in synthetic biology and related topics.<br></p>
+
+<p class="sub-stuff">We gained multiple insights from these surveys which we have incorporated into our education strategies as well.</p>
+
+<ol>
+    <li>Handbook for the general public- Through this handbook we aim to provide information on micro pollutants, due to lack of concern observed from the responses on the survey.</li>
+    <li>Education for the working class was tailored according to their responses from the survey as most of the respondents were assumed to be working class due to their educational qualifications. Participants responded that they didn’t want to learn more about GMOs, however when the same concept was explained without the use of the term GMO most participants seemed more open and accepting towards the concept as well as our project.</li>
+    <li> We put up posts on social media on organizations working towards development of safer daily use products as people demonstrated interest through their responses in our survey.</li>
+</ol>
+
+<p class="mt-5 sub-stuff"><b> Analyzing challenges faced by iGEM teams in contacting stakeholders : </b></p>
+
+<p class="mt-5 sub-stuff">This study aimed to gather information about different ethical and legislation challenges faced by iGEM teams. The purpose of this survey is to understand the challenges that the participants face regarding these topics.<br>
+Disclaimer: This is an initiative that we have started. However we have not received enough responses thus the inferences are not conclusive enough.<br>
+<b>This form will remain open to be filled by other teams for a year.</b><br>
+</p>
+
+<p class="mt-5 MAIN-STUFF">How our discussions lead to the Final Implementation</p>
+
+<p class="mt-5 sub-stuff"><b>Proposed Implementation</b></p>
+
+<p class="mt-5 sub-stuff">With the use of a modified <i>Acinetobacter baylyi</i> strain, we have proposed a packed bed bioreactor in our study to effectively break down the toxic chemical triclocarban (TCC) into non-toxic molecules. This strain has undergone genetic modification to express the tccA gene, which produces the TccA amidase enzyme that converts TCC to 4-chloroaniline and 3,4-dichloroaniline. The natural metabolic pathway of <i>Acinetobacter baylyi</i> has also been utilized to transform these chloroaniline daughter compounds  into cis-muconic acid, a secure end product that may be included into the bacterial energy supply by taking part in the TCA metabolic cycle.<br><br>
+
+<i>Bioreactor Design:</i><br>
+Our bioreactor design, as discussed previously, incorporates a packed bed configuration that facilitates effective contact between fluids and solids. This design remains instrumental in ensuring efficient TCC degradation.<br>
+<i>Choice of Packing Material:</i><br>
+We continue to utilize the locally sourced biochar from rice husks, in line with Dr. Bhat's recommendation, as an ideal packing material that provides both adsorption properties and a nutrient-rich environment for the modified <i>Acinetobacter baylyi</i> strain.<br>
+<i>Environmental Considerations:</i><br>
+Incorporating control samples into our growth curve experiments, as suggested by Dr. Shetty, ensures data reliability and environmental safety, especially considering the by-products of TCC degradation.<br>
+<i>Novel Biodegradation Pathway:</i><br>
+Dr. Ramananthan's inputs on a novel biodegradation pathway for TCC play a pivotal role in our project's success, shifting our initial idea of enzyme efficiency enhancement to an idea that was more feasible in our given timeline and resources. <br>
+<i>Choice of Microbe:</i><br>
+Mr. Sotiris' recommendation to employ multiple enzymes for complete TCC degradation complements our bacterial strain's capabilities.<br>
+<i>Application in Sludge Treatment Plants (STPs):</i><br>
+Mr. S.K. Swain's guidance on implementing our solution in STPs remains a key aspect, considering the higher TCC concentration in sludge.<br>
+<i>Regeneration of Biochar:</i><br>
+Varying the power of the spectrometer, creating an intensity-concentration calibration graph, and using hexane for biochar regeneration, as per Dr. Mahesha MG and Dr. Bhat's recommendations enhance our project's accuracy and sustainability.<br>
+<i>Future Implementation:</i><br>
+Our future plans, as guided by Dr. Kevin, to use clay or lignin as a binding agent for the biochar Raschig rings further strengthen the integrity of our packing material.<br>
+<i>Advanced Monitoring with LCMS:</i><br>
+The discussion with Dr. George to weigh the pros and cons of all the TCC quantification ideas and realizing that the use of LCMS for compound quantification is the most efficient method enhances our project's analytical capabilities.<br>
+<i>Fluidized Bed Bioreactor:</i><br>
+Dr. Krishnaiah's insights on fluidized bed bioreactors (for future implementation) will aid our project's scalability and efficiency.<br>
+<i>Bioreactor Placement:</i><br>
+S.K. Swain's guidance on bioreactor placement after the aeration tank in WWTPs is essential for optimal performance.<br>
+<i>Mathematical Modeling Simplification:</i><br>
+Dr. Murty's assurance that fouling can be ignored at the lab scale simplifies our mathematical modeling efforts.<br><br>
+
+By integrating these additional scientific insights into our project implementation, we hope to ensure a comprehensive approach to efficient TCC degradation while prioritizing environmental responsibility.<br><br>
+
+To know further details about our implementation, click here.
+</p>
+
+
+
+
+
+
+
+
+
+
+
+
 
 {% block page_content %}
 {% endblock %}
