--- a/wiki/pages/description.html
+++ b/wiki/pages/description.html
@@ -100,7 +100,7 @@
       their way into waste water treatment plants [1]. </p>
     <figure>
       <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-2.jpg" class="img-fluid">
-      <figcaption>Concentrations (ng/L) of PPCPs reported in surface water samples from different countries [9]
+      <figcaption font-family: 'Poppins', sans-serif;>Concentrations (ng/L) of PPCPs reported in surface water samples from different countries [9]
       </figcaption>
     </figure>
 
@@ -171,7 +171,7 @@
       with amide bond cleavage in carbanilide, dichlorocarbanilide, trichlorocarbanilide.
     </p>
 
-    <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-3.jpg" class="img-fluid">
+    <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-5.jpg" class="img-fluid">
 
     <p class="mt-5 MAIN-STUFF" id="section7">Chloroanilines</p>
     <p class="mt-5 sub-stuff"> Once degraded by existing methods, toxic chloroaniline byproducts accumulate in the
@@ -183,7 +183,7 @@
 
     <p class="mt-5 MAIN-STUFF" id="section8">Our Solution</p>
 
-    <p class="mt-5 sub-stuff">
+    <p class="mt-5 sub-stuff" font-family: 'Poppins', sans-serif;>
     
       <li>Some bacteria, through other degradation pathways, can degrade the initial byproducts 3,4-DCA and 4-CA to
         Krebs’ cycle intermediates which are then utilised by the bacteria.</li>
@@ -198,7 +198,7 @@
 
     <figure>
       <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-4.jpg" class="img-fluid">
-      <figcaption> Proposed degradation pathway</figcaption>
+      <figcaption font-family: 'Poppins', sans-serif;> Proposed degradation pathway</figcaption>
     </figure>
     </p>
 
@@ -232,7 +232,7 @@
 
       [6] Mathews, S., Henderson, S. & Reinhold, D. Uptake and accumulation of antimicrobials, triclocarban and
       triclosan, by food crops in a hydroponic system. Environ Sci Pollut Res 21, 6025–6033 (2014). <a
-        href="https://doi.org/10.1007/s11356-013-2474-3 " target="_blank">https://doi.org/10.1007/s11356-013-2474-3
+        href="https://doi.org/10.1007/s11356-013-2474-3 " target="_blank">https://doi.org/10.1007/s11356-013-2474-3</a>
         <br><br>
 
         [7] Grégorio Crini, Eric Lichtfouse. Advantages and disadvantages of techniques used for wastewater treatment.
