--- a/wiki/pages/description.html
+++ b/wiki/pages/description.html
@@ -100,7 +100,7 @@
       their way into waste water treatment plants [1]. </p>
     <figure>
       <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-2.jpg" class="img-fluid">
-      <figcaption font-family: 'Poppins', sans-serif;>Concentrations (ng/L) of PPCPs reported in surface water samples from different countries [9]
+      <figcaption {font-family: "Arial", sans-serif;}>Concentrations (ng/L) of PPCPs reported in surface water samples from different countries [9]
       </figcaption>
     </figure>
 
@@ -183,22 +183,21 @@
 
     <p class="mt-5 MAIN-STUFF" id="section8">Our Solution</p>
 
-    <p class="mt-5 sub-stuff" font-family: 'Poppins', sans-serif;>
+    <p class="mt-5 sub-stuff">
     
-      <li>Some bacteria, through other degradation pathways, can degrade the initial byproducts 3,4-DCA and 4-CA to
+      <li  font-family: 'Poppins', sans-serif;>Some bacteria, through other degradation pathways, can degrade the initial byproducts 3,4-DCA and 4-CA to
         Krebs’ cycle intermediates which are then utilised by the bacteria.</li>
-      <li><b>Our proposed solution to degrade TCC into non-toxic final products was to insert the novel amidase gene
+      <li  font-family: 'Poppins', sans-serif;><b>Our proposed solution to degrade TCC into non-toxic final products was to insert the novel amidase gene
           into a chassis which degrades its byproducts.</b></li>
-      <li>Our project involves modifying a known metabolic pathway by adding one step to it.
+      <li  font-family: 'Poppins', sans-serif;>Our project involves modifying a known metabolic pathway by adding one step to it.
       </li>
-      <li>Our novel amidase gene acts along with a cluster of native genes that degrade the compound till
+      <li  font-family: 'Poppins', sans-serif;>Our novel amidase gene acts along with a cluster of native genes that degrade the compound till
         cis,cis-muconic acid which is then further taken into the Krebs' cycle.
       </li>
   
 
     <figure>
-      <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-4.jpg" class="img-fluid">
-      <figcaption font-family: 'Poppins', sans-serif;> Proposed degradation pathway</figcaption>
+      <img src="https://static.igem.wiki/teams/4641/wiki/project-description-images/figure-5.jpg" class="img-fluid"><figcaption {font-family: "Arial", sans-serif;}> Proposed degradation pathway</figcaption>
     </figure>
     </p>
 
