--- a/wiki/pages/hardware.html
+++ b/wiki/pages/hardware.html
@@ -116,7 +116,7 @@
       <br><br></p>
       <p class="mt-5 MAIN-STUFF" id="section3"><b>IDEATION:</b></p>
       <p class="mt-5 sub-stuff">Our team came up with various initial ideas aiming to design  a <b>portable and highly sensitive</b> sensor to detect the concentration of triclocarban in parts per billion. A few detection methods were explored as well as their merits and demerits which have been summarized henceforth.</p>
-      <p class="mt-5 sub-stuff"><u>ELECTROCHEMICAL SENSORS:</u></p>
+      <p class="mt-5 MAIN-STUFF"><u>ELECTROCHEMICAL SENSORS:</u></p>
       <p class="mt-5 sub-stuff">Electrochemical sensors are used to detect <b>various compounds in wastewater at parts per million levels</b>. It consists of an electrode and a material coated transducer. A material which can have redox reactions with the analyte is chosen to coat the electrode. As the reaction takes place, the transducer connected to the electrode converts the chemical signal to an electrical signal which can then be detected [6].
       <br> Triclocarban possesses free ions such as chlorine ion (Cl-) which can produce a signal by interacting with the positive electrode. Unfortunately we found no literature on triclocarban’s redox reactions. Hence, even if we go by the assumption that these chlorine ions will interact with the electrode, this sensor would still have <b>low selectivity</b> as there are many compounds possessing chlorine ions. Moreover, employing this in a bioreactor setup would not be feasible because then our sensor must undergo selective coating, the sample would have to undergo pretreatment and proper calibration has to be done. 
       </p>
