--- a/wiki/pages/inclusivity.html
+++ b/wiki/pages/inclusivity.html
@@ -58,27 +58,27 @@
 
              <p class="mt-5 sub-stuff"> Our team has attempted to explore what groups are <b>underrepresented</b> in science. Particularly in the country that our team is from, India. Through our exploration, we have identified multiple groups traditionally underrepresented in science due to social stigma and financial barriers that prevent them from crossing the threshold and bridging the gap to access scientific avenues.<br><br>
 
-In developed countries, accessibility is used excessively, and efforts are made cost-effectively. However, in India, accessibility is not financially viable for most specially-abled individuals. The other groups recognized as excluded from scientific research are specially-abled individuals. We developed a skit and used the art of storytelling to gain their opinion on fields like synthetic biology.<br>
+One of the groups our team has recognized as excluded from scientific research are specially-abled individuals. We developed a skit and used the <b>art of storytelling</b> to gain their opinion on fields like synthetic biology.<br>
 In a country as diverse and rich with culture as India, language barriers are bound to prevent the latest scientific developments from reaching all communities. We addressed this through translations and involving stakeholders who spoke different languages. We also attempted to overcome regional barriers preventing people from accessing scientific information by leveraging online platforms like social media and blogs.<br><br>
 
 Our documentation is our primary method of educating the public about our project so that they can access all the finer details of our project. Hence, ensuring that the wiki was accessible by making changes to accommodate color-blind and dyslexic people was also a priority. Following the same train of thought, we have made an audio description of our promotion video accessible to visually abled individuals.<br><br>
 
 We also used a Bio-Art competition and a music composition to ensure that we taught science in a more accessible way to those with learning disabilities as well.<br> </p>
 
-                <p class="mt-5 MAIN-STUFF" id="section2">Our Team</p>
+                <p class="mt-5 MAIN-STUFF" id="section2"><b>Our Team</b></p>
 
             <p class="mt-5 sub-stuff"> Our team members come from different states of India, adding great diversity to our team. Being inclusive of the community has been one of our primary goals from the very beginning of the project. During the initial ideation of the project, we put in considerable effort to understand the preferred pronouns of our fellow teammates. The diversity that we bring to the table with various cultures and regions has been something of great help to us, providing us a chance to learn more about the others.<br> </p>
 
             <img class="img-fluid" src="https://static.igem.wiki/teams/4641/wiki/inclusivity/inclusivity-mindmap.png"> 
 
-            <p class="mt-5 MAIN-STUFF" id="section3">Crossing Language Barriers</p>
+            <p class="mt-5 MAIN-STUFF" id="section3"><b>Crossing Language Barriers</b></p>
 
             <p class="mt-5 sub-stuff"> India has 22 official languages with hundreds of regional dialects with its own layers of dynamics in cultural and social diversity. Access to scientific information should not be restricted by these language barriers. Regional languages bridge these gaps, ensuring individuals from diverse linguistic backgrounds can access and contribute to scientific knowledge. We can empower communities to understand and apply scientific findings to their contexts, fostering sustainable practices and development.<br> </p>
 
             <ul class="mt-5 sub-stuff">
-                <li>We interacted with local stakeholders in various languages like Hindi, Tamil, Bengali, Kannada and Odia to explain our project idea to them and get their genuine opinions on our implementation strategy.</li>
+                <li>We interacted with local stakeholders in <b>various languages</b> like Hindi, Tamil, Bengali, Kannada and Odia to explain our project idea to them and get their genuine opinions on our implementation strategy.</li>
                 <li>We also conducted education programs in local languages like Tamil and Kannada to increase engagement among various groups. Our education visits were not restricted to schools in Manipal; we have taught students in schools across many states of India</li>
-                <li>We have gone a step further and collaborated with India Literacy Project. This non-profit organization aims to enable children in government schools to acquire grade-appropriate skills and career opportunities. We translated our educational content on "Chemicals in Daily Use Products" into a regional language, Kannada, which will be integrated into their syllabus and be taught at over 14,102 schools across India through the India Literacy project as optional additional content; this gave us a chance to spread awareness about the presence of harmful chemicals in personal care products among the local community.</li>
+                <li>We have gone a step further and collaborated with India Literacy Project. This non-profit organization aims to enable children in government schools to acquire grade-appropriate skills and career opportunities. We <b>translated our educational content</b> on "Chemicals in Daily Use Products" into a regional language, Kannada, which will be integrated into their syllabus and be taught at over 14,102 schools across India through the India Literacy project as optional additional content; this gave us a chance to spread awareness about the presence of harmful chemicals in personal care products among the local community.</li>
             </ul>
 
 
@@ -113,7 +113,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
                 </button>
             </div>
 
-            <p class="mt-5 MAIN-STUFF" id="section4"> Interacting with Specially-Abled Individuals </p> 
+            <p class="mt-5 MAIN-STUFF" id="section4"><b> Interacting with Specially-Abled Individuals </b></p> 
 
             <p class="mt-5 sub-stuff"> Differently abled people and people with neurodivergence are often left out of scientific education for various reasons; this often means that advancements in science and technology are often only accessible to abled people, and persons with disabilities often find it challenging to integrate into and contribute to STEM communities. We attempted to reach out to as many sections of society as possible, tailoring our approach to better fit certain groups.<br><br> </p>
 
@@ -158,9 +158,9 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
       <li>Much education and outreach rely primarily on visual aids; this makes it difficult for those with visual impairment to understand or contribute to science adequately. We decided to use music to communicate scientific concepts so that it would be accessible to those with visual disabilities while appealing to those with non-scientific backgrounds. We collaborated with musicians to create a composition using the amino acids comprising our protein tccA amidase as a basis for the notes in the sequence; this also allowed us to communicate biological concepts such as codons, protein construction, and modification using musical analogies that most people understand. It was an interactive approach to spark curiosity about science within the minds of the non-scientific community.<br><br></li>
     </ul>
 
-    <p class="mt-5 MAIN-STUFF" id="section5"> Regional Diversity </p>
+    <p class="mt-5 MAIN-STUFF" id="section5"><b>Regional Diversity</b></p>
 
-    <p class="mt-5 sub-stuff"> Our team comprises students from different regions of India, and our interaction with people made us realize the importance of reaching out to various regional populations. Our goal is to make science accessible to all. We used media as a means to communicate with a wider variety of audience ranging from the youth to senior citizens with no barriers created by the community. </p>
+    <p class="mt-5 sub-stuff"> Our team comprises students from different regions of India, and our interaction with people made us realize the importance of reaching out to <b>various regional populations</b>. Our goal is to make science accessible to all. We used media as a means to communicate with a wider variety of audience ranging from the youth to senior citizens with no barriers created by the community. </p>
 
     <ul class="mt-5 sub-stuff">
       <li>We created a series of SynBio comic strips to ensure that the world of synthetic biology reaches a considerable audience. </li>
@@ -219,7 +219,7 @@ We also used a Bio-Art competition and a music composition to ensure that we tau
   <figcaption style="text-align:center"> 3-Day Bioremediation conclave held in collaboration with team iGEM IIT-Delhi </figcaption>
   </figure>
 
-<p class="mt-5 MAIN-STUFF" id="section6">Interconnectivity between Science and Art</p>
+<p class="mt-5 MAIN-STUFF" id="section6"><b>Interconnectivity between Science and Art</b></p>
 <p class="mt-5 sub-stuff"> Science, like any other field, involves creativity and innovation. Science is incorporated everywhere, be it music or artwork. In an attempt to interact with the non-scientific community and bring out the creative aspects of synthetic biology, our team put in substantial efforts.<br> </p>
 
 
