Only embed airtable is left

--- a/wiki/pages/contribution.html
+++ b/wiki/pages/contribution.html
@@ -44,11 +44,19 @@
 <div class="content">
                 <div class="m-2 mb-16">
                     <p class="mt-5 MAIN-STUFF" id="section1"> CAD Design Model—Workstation model for Specially Abled People </p>
-                    <p class="mt-5 sub-stuff"> Our research found that scientific pursuit can be a hostile field for specially-abled individuals. One of our team members interacted with their friend who uses a wheelchair, and they brought up this issue about lab accessibility. Hence, we identified this problem and proposed the model described below. This is shines a light upon the lack of accessibility in labs and aims to take a step forward to accomodate people with disabilities and neurodivergence in such environments.<br><br>
+                    <p class="mt-5 sub-stuff"> Our research found that scientific pursuit can be a hostile field for specially-abled individuals. One of our team members interacted with their friend who uses a wheelchair, and they brought up this issue about lab accessibility. Hence, we identified this problem and proposed the model described below. This is primarily due to a lack of accessibility features in labs and awareness regarding how to accommodate people with disabilities and neurodivergence.<br><br>
 
 In conversations with people with disabilities, we found that people with wheelchairs often found it difficult to perform experiments due to lab workstations designed for abled people in standing positions. While height-adjustable workstations are available on the market, they can be inaccessible to some labs due to the lack of funds and resources. Some labs may also be designed with built-in workstations, so adding a new workstation may be inconvenient because of the lab's positioning and lack of space. To rectify this, we created a portable and collapsible height-adjustable workstation model that attaches to an existing workstation; this allows the workstation to be used when necessary and stored away when not in use. It is also composed of simple and cheap materials and is easy to build, so labs with limited space and finances can use it. <br><br>
 Further, we believe that this will be a good starting point for other iGEM teams who are looking to improve the inclusivity of their lab practices and project. We have provided our CAD design and blueprints and encourage other teams to modify them as necessary.
  </p>
+
+ <div class="ratio ratio-16x9 mt-5">
+          <iframe src="https://static.igem.wiki/teams/4641/wiki/contributions/bioreactorhandbook.pdf" allowfullscreen></iframe>
+</div>
+
+<iframe title="MIT-MAHE: Inclusivity Model (2023) [English]" width="560" height="315" src="https://video.igem.org/videos/embed/72476b48-2ab1-43f6-8847-68742ada0528" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
+
+
 <p class="mt-5 MAIN-STUFF" id="section2"> Bioremediation Airtable </p>
 <p class="mt-5 sub-stuff"> Bioremediation is a newly introduced track in iGEM 2023. Before this, Bioremediation based projects majorly fell under the Environment Track, a vast track, which includes a multitude of projects. The members of iGEM MIT-MAHE have made an effort to compile all previous year bioremediation based projects as an airtable. The table was inspired by the Phoenix project and we believe it would be a resource for future teams to refer to and draw inspiration from. </p>
 
@@ -66,10 +74,17 @@ Designing a bioreactor can be quite daunting, considering the huge number of fac
 <p class="mt-5 sub-stuff"> As a part of our project, our team worked with different bacteria—<i>Pseudomonas fluoroscens, Pseudomonas putida</i> and <i>Acinetobacter baylyi</i> in the lab. These organisms are not commonly used as model organisms. However, the standardisation of more organisms as model organisms is required. This is because other bacteria have desirable properties that existing model organisms may not possess. Our team has designed a guide to working with these bacteria as chassis for future teams to refer from. 
 </p>
 
-<p class="mt-5 MAIN-STUFF" id="section5">Part: BBa_K4641000</p>
+<div class="ratio ratio-16x9 mt-5">
+          <iframe src="https://static.igem.wiki/teams/4641/wiki/contributions/wet-lab-handbook.pdf" allowfullscreen></iframe>
+</div>
 
 
-                </div>
+
+<p class="mt-5 MAIN-STUFF" id="section5"><a href="https://2023.igem.wiki/mit-mahe/project-parts">Part: BBa_K4641000</a></p>
+
+<p class="mt-5 sub-stuff">Aniline compounds are among the hardest compounds to biodegrade due to the high stability of the carbon-nitrogen bond. However, they are a component in many micropollutants in wastewater. Triclocarban(3,4,4′-Trichlorocarbanilide)(TCC) is one such pollutant. One of the major objectives of our project was to biodegrade TCC to non toxic byproducts. TccA gene, from the Ochrobactrum sp. TCC-2, codes for a novel amidase enzyme <b>(EC 3.5.1.4)</b>, responsible for the hydrolysis of the two amide bonds of TCC and its dehalogenated analogs 4,4'-dichlorocarbanilide (DCC) and carbanilide (NCC) to more biodegradable chloroaniline or aniline products. TccA also has hydrolytic activity to a broad spectrum of amide bonds from herbicides, insecticides and chemical intermediates. The broad substrate spectrum of TccA suggested potential use for bioremediation applications. 
+In our project, TccA amidase is used as an agent to biodegrade the TCC present in the sludge of the wastewater treatment plant.</p>
+    </div>
 </div>
 
 {% endblock %}
