Adding everything other than airtable

--- a/wiki/pages/contribution.html
+++ b/wiki/pages/contribution.html
@@ -51,10 +51,12 @@ Further, we believe that this will be a good starting point for other iGEM teams
  </p>
 
  <div class="ratio ratio-16x9 mt-5">
-          <iframe src="https://static.igem.wiki/teams/4641/wiki/contributions/bioreactorhandbook.pdf" allowfullscreen></iframe>
+          <iframe src="https://static.igem.wiki/teams/4641/wiki/contributions/design-report-for-inclusivity-cad.pdf" allowfullscreen></iframe>
 </div>
 
-<iframe title="MIT-MAHE: Inclusivity Model (2023) [English]" width="560" height="315" src="https://video.igem.org/videos/embed/72476b48-2ab1-43f6-8847-68742ada0528" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>
+<div class="mt-5>"
+<iframe title="MIT-MAHE: Inclusivity Model (2023) [English]" width="560" height="315" src="https://video.igem.org/videos/embed/72476b48-2ab1-43f6-8847-68742ada0528" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" style="display:block;"></iframe>
+</div>
 
 
 <p class="mt-5 MAIN-STUFF" id="section2"> Bioremediation Airtable </p>
